# mindtap

./: .editorconfig  .gitignore  CLAUDE.md  README.md  components.json  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.archive/: index.html  package.json  tsconfig.json  vite.config.ts
.archive/spec/: _index.md
.archive/src/: index.css
.archive/src-tauri/: tauri.conf.json
.claude/rules/: ask-user-question-threshold.mdc  comment-style.mdc  commit-style.mdc  decision-method.mdc  dev-verify-before-commit.mdc  feature-architecture.mdc  first-step-research.mdc  self-apply-after-write.mdc  task-directory.mdc
.planning/2026-06-14-floating-window-design/: findings.md  progress.md  task_plan.md
.planning/2026-06-20-commit-hygiene/: audit-current-state.md  research-best-practices.md
.planning/2026-06-20-floating-r7-bisect-restore/: findings.md  progress.md  task_plan.md
.planning/2026-06-20-floating-redesign/: findings.md  progress.md  synthesis-6-agents.md  task_plan.md
docs/: README.md  v1.0-主窗改造完成.md
docs/architecture/: floating-visibility-checklist.md
docs/competitors/: research-cross-runtime-symmetry.md  research-vertical-slice.md
scripts/: dev-url.sh  floating-smoke.sh
src/: App.tsx  floating.html  index.css  index.test.ts  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: floating.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/accessibility/: cmd.rs  mod.rs  platform.rs
src-tauri/src/commands/: check_in_cmd.rs  floating_cmd.rs  glass.rs  idea_cmd.rs  mod.rs  record_cmd.rs  task_cmd.rs
src-tauri/src/db/: check_in.rs  idea.rs  mod.rs  record.rs  schema.rs  task.rs
src-tauri/src/diagnostics/: cmd.rs  mod.rs
src-tauri/src/floating/: mod.rs  platform.rs
src-tauri/src/glass/: ffi.rs
src-tauri/src/log/: mod.rs
src-tauri/src/settings/: apply.rs  cmd.rs  mod.rs  schema.rs
src-tauri/swift/MindtapGlass/: Package.swift
src-tauri/swift/MindtapGlass/Sources/MindtapGlass/: FFIBridge.swift  GlassOverlay.swift  GlassOverlayManager.swift  Tier.swift  WindowGlassBackground.swift
src-tauri/swift/MindtapGlass/Tests/MindtapGlassTests/: FFIBridgeTests.swift  GlassOverlayManagerTests.swift  TierTests.swift
(+361 files in other folders)
