[package]
name = "mindtap"
version = "0.1.0"
description = "极简记录 APP · 跨平台桌面"
authors = ["AhaJason <Jason-c1@outlook.com>"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "mindtap_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
rusqlite = { version = "0.32", features = ["bundled"] }
tokio = { version = "1", features = ["sync", "time", "rt"] }
anyhow = "1"
thiserror = "1"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"

[dev-dependencies]
tempfile = "3"
